<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:background="@drawable/otro">

    <TabHost
        android:id="@+id/tbhConversores"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                style="@android:style/Widget.Holo.Light.TabWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D6E7F4" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/tabAlmacenamiento"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituAlmace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="75dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloAlmace"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblDe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="270dp"
                        android:text="A:"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spnDe"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="200dp"
                        android:entries="@array/Almacenamiento"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/spnA"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="270dp"
                        android:entries="@array/Almacenamiento"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/lblA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="200dp"
                        android:text="DE:"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabLongitud"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituLongitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/Titulolongi"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/LongitudCambioTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="320dp"
                        android:text="Longitud a Cambiar"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/longitudActualSP"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="126dp"
                        android:layout_marginTop="260dp"
                        android:entries="@array/Longitudes"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/LongitudCambiarSP"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="125dp"
                        android:layout_marginTop="350dp"
                        android:entries="@array/Longitudes"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/LongitudActualTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="135dp"
                        android:layout_marginTop="230dp"
                        android:text="Longitud Acual"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="124dp"
                        android:layout_height="84dp"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="120dp"
                        app:srcCompat="@drawable/length"
                        tools:ignore="VectorDrawableCompat" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabMonedas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituloMoned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloMoneda"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/MonedaCambioTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="320dp"
                        android:text="Moneda a Cambiar"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/MonedaActualSP"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="126dp"
                        android:layout_marginTop="260dp"
                        android:entries="@array/Moneda"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/MonedaCambiarSP"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="125dp"
                        android:layout_marginTop="350dp"
                        android:entries="@array/Moneda"
                        android:gravity="center" /><![CDATA[


                        android:layout_height=
                        android:ems=10"
                        android:inputType="number" />

                    ]]>

                    <TextView
                        android:id="@+id/MonedaActualTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="135dp"
                        android:layout_marginTop="230dp"
                        android:text="Moneda Acual"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="124dp"
                        android:layout_height="84dp"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="120dp"
                        app:srcCompat="@drawable/ic_money"
                        tools:ignore="VectorDrawableCompat" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabMasa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituMasa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloMasa"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabVolumen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituVolum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloVolumen"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tabTiempo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituTiempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="110dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloTiempo"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbltime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="42dp"
                        android:layout_marginTop="270dp"
                        android:text="A:"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spnTime"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="200dp"
                        android:entries="@array/Tiempo"
                        android:gravity="center" />

                    <Spinner
                        android:id="@+id/spntimen"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="270dp"
                        android:entries="@array/Tiempo"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/lblempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="200dp"
                        android:text="DE:"
                        android:textColor="@android:color/background_dark"
                        android:textSize="18sp" />

                </RelativeLayout>
                
                <RelativeLayout
                    android:id="@+id/tabTDatos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbltituTDatos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/TituloTransDatos"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>



            </FrameLayout>
        </RelativeLayout>
    </TabHost>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/IngreseCantidadTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="400dp"
            android:ems="10"
            android:gravity="center"

            android:hint="Ingrese Cantidad"

            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/ConvertirBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="450dp"
            android:onClick="Convertir"
            android:text="Convertir" />

        <TextView
            android:id="@+id/ResultadoTV"
            android:layout_width="152dp"
            android:layout_height="65dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="600dp"
            android:hint="Resultado" />


    </RelativeLayout>
</RelativeLayout>